--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,11 +4,8 @@ spring:
       routes:
         - id: YelpService
           uri: https://api.yelp.com
-          #uri: http://localhost:8081
           predicates:
              - Path=/v3/**
-             #- Path=/api/**
-          #filters:
-            #- RewritePath=/api/(?<segment>/?.*), /api/validation
-            #- IDLValidationFilter
+          filters:
+            - IDLValidationFilter
 
