--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
         - id: YelpService
           uri: https://api.yelp.com
           predicates:
-             - Path=/v3/**
+             - Path=/v3/businesses/**,/v3/transactions/**
           filters:
             - IDLValidationFilter
 
